[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pynet"
version = "1.2.0"
description = "я не знаю что тут пиать"
authors = ["hit<@HITHELL.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.extras]
docs = ["sphinx"]
